* Release 0.7.0
	* Fixed Bug #687714: 'Give a nice error when static linking won't work'.
	* Fixed Bug #635122: 'Rename helper to web_helper and extract from class'.
	* Fixed Bug #691798: 'Add a way to run the unit test without installing'.
	* Fixed Bug #687708: 'Make it work with python 2.6 and 2.7'.
	* Fixed Bug #687715: 'Make it work with 32bit fedora LDC'.
	* Fixed Bug #633586: 'Make dynamic or static linking configurable'.
	* Fixed Bug #660290: 'Creating scaffolding with references does not work'.
	* Fixed Bug #598630: 'In dev and test modes symlink public folder instead of copying'.
	* Fixed Bug #653419: 'Add a way to run unit tests'.
	* Fixed Bug #652783: 'Add model find conditions'.
	* Fixed Bug #635131: 'Building script regression rebuilds everything'.
	* Fixed Bug #635161: 'Sessions ids are always unknown'.
	* Fixed Bug #643251: 'Crud put and delete no longer work'.
	* Fixed Bug #632083: 'Apps under fast cgi can't log or create files'.
	* Fixed Bug #636098: 'The ubuntu package does not work on amd64'.
	* Fixed Bug #598629: 'Make backtraces not show in release'.

2010-09-06 Release 0.6.0
	* Fixed Bug #600490: 'Make a fast cgi deploy script'.
	* Fixed Bug #598628: 'make it so we can have development and production configs'.
	* Fixed Bug #585977: 'The configuration is hard coded'.
	* Fixed Bug #603021: 'If startup app build fails, rebuilding will always fail'.
	* Fixed Bug #598613: 'Invalid route format gives an ugly error message'.
	* Fixed Bug #612828: 'The ipc is too slow for large strings'.
	* Fixed Bug #509771: 'There is no way to upload files'.
	* Fixed Bug #613310: 'Connections fail with ab test'.
	* Fixed bug #603409: 'The ipc messages get truncated with binary data'.

2010-06-28 Release 0.5.0
	* Fixed bug #591855: 'Compilation needs to be more strict'.
	* Fixed bug #589959: 'gen configure server header_max_size is ignored'.
	* Fixed Bug #589820: 'Change configuration files to json'.
	* Fixed Bug #584748: 'Move from Tornado to Dornado'.