@@ -2,7 +2,7 @@
 <form action="/files/<%=controller._file.id%>?method=PUT" class="edit_file" id="edit_file_<%=controller._file.id%>" enctype="multipart/form-data" method="post">
 	<h1>Editing File</h1>
 
-	<%# UI.errors_for(controller._file, "file") %>
+	<%# errors_for(controller._file, "file") %>
 
 	File: <input id="file_name" name="file_name" type="file" />
 	<br />
