@@ -2,7 +2,7 @@
 <form action="/files" class="new_file" id="new_file" enctype="multipart/form-data" method="post">
 	<h1>New File</h1>
 
-	<%# UI.errors_for(controller._file, "file") %>
+	<%# errors_for(controller._file, "file") %>
 
 	File: <input id="file_name" name="file_name" type="file" />
 	<br />
