@@ -2,7 +2,7 @@
 <%# form_start("comments/" ~ to_s(controller._comment.id) ~ "?method=PUT", "edit_comment_" ~ to_s(controller._comment.id), "edit_comment", "post"); %>
 	<h1>Editing Comment</h1>
 
-	<%# UI.errors_for(controller._comment, "comment") %>
+	<%# errors_for(controller._comment, "comment") %>
 
 	<p>
 		<label for="comment_user">User</label><br />
