@@ -2,7 +2,7 @@
 <%# form_start("comments", "new_comment", "new_comment", "post"); %>
 	<h1>New Comments</h1>
 
-	<%# UI.errors_for(controller._comment, "comment") %>
+	<%# errors_for(controller._comment, "comment") %>
 
 	<p>
 		<label for="comment_user">User</label><br />
